[package]
name = "minhook-sys"
version = "0.1.0"
authors = ["metherul <metherul@protonmail.com>"]
edition = "2018"
repository = "https://github.com/metherul/minhook-sys"
links = "minhook.x64d"

[lib]
name = "minhook_sys"
path = "lib.rs"

[dependencies]
cty = "0.2.1"
winapi = { version = "0.3.9", features = [ "winnt", "minwindef" ] }